[fludland-service] message error handler